src/test/resources/private/typechecking/pass/conditions/cond_pass03.jova

class Test1 {

	public int memint;
	public bool membool;
}

class Cls{
    public Test1 test1;

	public Test1 func(int x){
		string res;
		string txt;
	    int t1, t2, t3;
	    bool b1, b2, b3;

	    this.test1 = new Test1;
		
		t1 = this.test1.membool || (b1 && (!(b2||b3))) ? t2: 0;
		t2 = (t1 >= t3 && t3 < t2)|| b1 && (this.test1.membool == true) ? 15 : 5;

		return this.test1;
	}
}